--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV_Maryna S.</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
+    <link rel="stylesheet" href="./css/main.min.css">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet"> -->
 </head>
 <body>
     <!--main container-->
     <div class="wrapper">
         <aside class="sidebar">
+            <div class="info-mob">
+                <h2 class="profession-mob">Судовий експерт із фінансово-кредитних операцій</h2>
+                <h1 class="name-mob">Марина Скрипник</h1>
+                <p class="personal-mob">
+                    ДН: 10-12-1985 <span class="profession-divider-mob">|</span> Київ <span
+                        class="profession-divider-mob">|</span>
+                    Україна
+                </p>
+            </div>
             <img class="my-photo" src="./img/photo-1.jpg" alt="Моє фото">
            
             <!--contacts container-->
@@ -30,100 +40,100 @@
                 </div>
             </div>
 
-            <!--tech skills container-->
-            <div class="tech-skills-container">
-                <h3 class="tech-skills-title">Ключові компетенції</h3>
-                <ul>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Орієнтуюсь у законодавстві</span>
+            <!-- skills container-->
+            <div class="skills-container">
+                <h3 class="skills-title">Ключові компетенції</h3>
+                <ul class="skills-list">
+                    <li class="skills-item">
+                        <span class="skills-text">Орієнтуюсь у законодавстві</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Працюю з документами</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Працюю з документами</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Розуміюсь у кредитних операціях</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Розуміюсь у кредитних операціях</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Маю аналітичні навики</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Маю аналітичні навики</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Пишу професійні тексти</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Пишу професійні тексти</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Володію ПК</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Володію ПК</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Використовую інтернет-ресурси</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Використовую інтернет-ресурси</span>
                     </li>
                 </ul>
             </div>
 
             <!--soft skills container-->
-            <div class="tech-skills-container">
-                <h3 class="tech-skills-title">Особисті якості</h3>
-                <ul>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Орієнтована на розвиток</span>
+            <div class="skills-container">
+                <h3 class="skills-title">Особисті якості</h3>
+                <ul class="skills-list">
+                    <li class="skills-item">
+                        <span class="skills-text">Орієнтована на розвиток</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Здатна до самонавчання</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Здатна до самонавчання</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Вмію самоорганізовуватись</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Вмію самоорганізовуватись</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Тайм-менеджмент</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Тайм-менеджмент</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Розставляю пріоритети</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Розставляю пріоритети</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Відповідальна за свої рішення</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Відповідальна за свої рішення</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Прагну до вдосконалення</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Прагну до вдосконалення</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Креативна та енергійна</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Креативна та енергійна</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Володію терпінням</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Володію терпінням</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Уважна до деталей</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Уважна до деталей</span>
                     </li>
                 </ul>
             </div>
             
 
             <!--languages container-->
-            <div class="tech-skills-container">
-                <h3 class="tech-skills-title">Знання мов</h3>
-                <ul>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Українська............[рідна]</span>
+            <div class="skills-container">
+                <h3 class="skills-title">Знання мов</h3>
+                <ul class="skills-list">
+                    <li class="skills-item">
+                        <span class="skills-text">Українська........[рідна]</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Російська...............[високий рівень]</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Російська...........[високий рівень]</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Англійська............[базовий рівень]</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Англійська........[базовий рівень]</span>
                     </li>
                 </ul>
             </div>
 
             <!--hobby container-->
-            <div class="tech-skills-container">
-                <h3 class="tech-skills-title">Захоплення</h3>
-                <ul>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Фітнес</span>
+            <div class="skills-container">
+                <h3 class="skills-title">Захоплення</h3>
+                <ul class="skills-list">
+                    <li class="skills-item">
+                        <span class="skills-text">Фітнес</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">Читання</span>
+                    <li class="skills-item">
+                        <span class="skills-text">Читання</span>
                     </li>
-                    <li class="tech-skills-item">
-                        <span class="tech-skills-text">IT</span>
+                    <li class="skills-item">
+                        <span class="skills-text">IT</span>
                     </li>
                 </ul>
             </div>
@@ -135,8 +145,15 @@
         <div class="about-me-container">
             <!--about me main info-->
             <div class="info-container">
-                <h2 class="profession">Судовий експерт</h2>
-                <h1 class="name">Марина Скрипник</h1>
+
+                <div class="info-tablet info-mob">
+                    <h2 class="profession profession-mob">Судовий експерт із фінансово-кредитних операцій</h2>
+                    <h1 class="name name-mob">Марина Скрипник</h1>
+                    <p class="personal personal-mob">
+                        ДН: 10-12-1985 <span class="profession-divider profession-divider-mob">|</span> Київ <span class="profession-divider profession-divider-mob">|</span>
+                        Україна
+                    </p>
+                </div>
 
                 <p class="description">За останні 4 роки взяла участь у написанні понад 100 експертних висновків. Написала понад 50 публікацій з розміщенням на сайтах та у соц.мережах. У 2019 році пройшла і успішно завершила
             підготовку та атестацію в Міністерстві юстиції України на незалежного судового експерта по спеціальності "Дослідження документів фінансово-кредитних операцій".</p>
@@ -148,18 +165,18 @@
                 <ol>
                     <li class="projects-item"> 
                         <a class="projects-link" href="https://www.facebook.com/creditexpertiza/">facebook.com/creditexpertiza/</a>
-                        <span class="dots">..................................</span>
-                        <span><b>[</b><span class="tech-name">власна бізнес-сторінка</span><b>]</b></span>  
+                        <span class="dots">..........</span>
+                        <span class="link-description"><b>[</b><span class="tech-name">власна бізнес-сторінка</span><b>]</b></span>  
                     </li>
                     <li class="projects-item"> 
                         <a class="projects-link" href="https://www.pacers.top/">pacers.top</a>
-                        <span class="dots">...........................................................................</span>
-                        <span><b>[</b><span class="tech-name">ренкінг, публікації, оформлення</span><b>]</b></span> 
+                        <span class="dots">..........................................................</span>
+                        <span class="link-description"><b>[</b><span class="tech-name">публікації, оформлення</span><b>]</b></span> 
                     </li>
                     <li class="projects-item"> 
                         <a class="projects-link" href="https://ua-expert.com/">ua-expert.com</a>
-                        <span class="dots">..................................................................</span>
-                        <span><b>[</b><span class="tech-name">публікації, оформлення</span><b>]</b></span> 
+                        <span class="dots">................................................</span>
+                        <span class="link-description"><b>[</b><span class="tech-name">публікації, оформлення</span><b>]</b></span> 
                     </li>
                 </ol>
             </div>
@@ -244,10 +261,10 @@
                     <h4 class="education-company">Київський Національний Економічний Університет ім. В. Гетьмана</h4>
                     <ul class="education-duties">
                         <li class="profession-duties-item">
-                            <p>Менеджмент підприємницької діяльності<span class="dots">..............</span><span><b>[</b><span class="tech-name">Магістр економіки</span><b>]</b></span></p>
+                            <p>Менеджмент підприємницької діяльності<span class="dots">.............</span><span class="link-description"><b>[</b><span class="-name">Магістр економіки</span><b>]</b></span></p>
                         </li>
                         <li class="profession-duties-item">
-                            <p>Економіка підприємства<span class="dots">........................................................</span><span><b>[</b><span class="tech-name">Бакалавр, викладач економіки</span><b>]</b></span></p>
+                            <p>Економіка підприємства<span class="dots">..............................................................</span><span class="link-description"><b>[</b><span class="-name">Бакалавр, викладач економіки</span><b>]</b></span></p>
                         </li>
                     </ul>
                     <span class="profession-time">2002 - 2007 рр. <span class="profession-divider">|</span> Київ</span>
