Виправляє ховери/фокуси

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
             <!--contacts container-->
             <div class="contacts-container">
                 <h3 class="contacts-title">Контакти</h3>
-                <div>
+                <div class="contact-block">
                     <span class="contacts-link-type">Т:</span>
                     <a class="contacts-link" href="tel:+380979445659">+38 097 944 56 59</a>
                 </div>
-                <div>
+                <div class="contact-block">
                     <span class="contacts-link-type">Е:</span>
                     <a class="contacts-link" href="mailto:marina.skrypnyk@gmail.com">marina.skrypnyk@gmail.com</a>
                 </div>
-                <div>
+                <div class="contact-block">
                     <span class="contacts-link-type">F:</span>
                     <a class="contacts-link" href="https://www.facebook.com/mskrypnyk/">Facebook</a>
                 </div>
@@ -146,11 +146,11 @@
             <!--about me main info-->
             <div class="info-container">
 
-                <div class="info-tablet info-mob">
-                    <h2 class="profession profession-mob">Судовий експерт із фінансово-кредитних операцій</h2>
-                    <h1 class="name name-mob">Марина Скрипник</h1>
-                    <p class="personal personal-mob">
-                        ДН: 10-12-1985 <span class="profession-divider profession-divider-mob">|</span> Київ <span class="profession-divider profession-divider-mob">|</span>
+                <div class="info-tablet">
+                    <h2 class="profession">Судовий експерт із фінансово-кредитних операцій</h2>
+                    <h1 class="name">Марина Скрипник</h1>
+                    <p class="personal">
+                        ДН: 10-12-1985 <span class="profession-divider profession-divider-personal">|</span> Київ <span class="profession-divider profession-divider-personal">|</span>
                         Україна
                     </p>
                 </div>
@@ -162,11 +162,11 @@
             <!--projects container-->
             <div class="projects-container">
                 <h3 class="about-me-title">Робота із сайтами</h3>
-                <ol>
+                <ol class="projects-list">
                     <li class="projects-item"> 
                         <a class="projects-link" href="https://www.facebook.com/creditexpertiza/">facebook.com/creditexpertiza/</a>
                         <span class="dots">..........</span>
-                        <span class="link-description"><b>[</b><span class="tech-name">власна бізнес-сторінка</span><b>]</b></span>  
+                        <span class="link-description"><b>[</b><span class="tech-name">власна бізнес-сторінка</span><b>]</b></span>
                     </li>
                     <li class="projects-item"> 
                         <a class="projects-link" href="https://www.pacers.top/">pacers.top</a>
@@ -195,7 +195,7 @@
 
                 <!--company 2-->
                 <div>
-                    <h4 class="profession-title">Експерт по кредитам <span class="profession-company">ТОВ «Експертно-дослідна служба України»</span></h4>
+                    <h4 class="profession-title">Експерт по кредитам <a href="https://ua-expert.com/ua/" class="profession-company">ТОВ «Експертно-дослідна служба України»</a></h4>
                     <span class="profession-time">
                         2016 - 2019 рр. <span class="profession-divider">|</span> Київ
                     </span>
@@ -213,7 +213,7 @@
 
                 <!--company 3-->
                 <div>
-                    <h4 class="profession-title">Провідний економіст <span class="profession-company">ПАТ «ВТБ Банк»</span></h4>
+                    <h4 class="profession-title">Провідний економіст <a href="https://vtb.fg.gov.ua/" class="profession-company">ПАТ «ВТБ Банк»</a></h4>
                     <span class="profession-time">
                         2008 - 2014 рр. <span class="profession-divider">|</span> Київ
                     </span>
@@ -227,7 +227,7 @@
 
                 <!--company 4-->
                 <div>
-                    <h4 class="profession-title">Провідний економіст <span class="profession-company">АКБ «Укрсоцбанк»</span></h4>
+                    <h4 class="profession-title">Провідний економіст <a href="https://ukrsotsbank.com/" class="profession-company">АКБ «Укрсоцбанк»</a></h4>
                     <span class="profession-time">
                         2007 - 2008 рр. <span class="profession-divider">|</span> Київ
                     </span>
@@ -245,20 +245,20 @@
 
                 <!--education 1-->
                 <div>
-                    <h4 class="education-company">Інститут права та післядипломної освіти Міністерства юстиції України</h4>
+                    <h4 class="education-company"><a href="https://centerjust.gov.ua/" class="profession-company">Інститут права та післядипломної освіти Міністерства юстиції України</a></h4>
                     <p class="education-duties">Підготовка з теоретичних, організаційних і процесуальних питань судової експертизи</p>
                 </div>
 
                 <!--education 2-->
                 <div>
-                    <h4 class="education-company">Київський науково-дослідний інститут судових експертиз (КНДІСЕ)</h4>
+                    <h4 class="education-company"><a href="https://kndise.gov.ua/" class="profession-company">Київський науково-дослідний інститут судових експертиз (КНДІСЕ)</a></h4>
                     <p class="education-duties">Практична підготовка для присвоєння кваліфікації судового експерта із спеціальності «Дослідження документів фінансово-кредитних операцій»</p>
                     <span class="profession-time">2019 р. <span class="profession-divider">|</span> Київ</span>
                 </div>
 
                 <!--education 3-->
                 <div>
-                    <h4 class="education-company">Київський Національний Економічний Університет ім. В. Гетьмана</h4>
+                    <h4 class="education-company"><a href="https://kneu.edu.ua/" class="profession-company">Київський Національний Економічний Університет ім. В. Гетьмана</a></h4>
                     <ul class="education-duties">
                         <li class="profession-duties-item">
                             <p>Менеджмент підприємницької діяльності<span class="dots">.............</span><span class="link-description"><b>[</b><span class="-name">Магістр економіки</span><b>]</b></span></p>
